test/files/events-neg/super-event-not-found.check
super-event-not-found.scala:4: error: event e overrides nothing
  override imperative evt e[Unit]
                          ^
one error found